--- a/src/app/meu-perfil/alterar-senha.component.css
+++ b/src/app/meu-perfil/alterar-senha.component.css
@@ -7,7 +7,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-} 
+}
 
 .row {
     margin-bottom: 30px;
@@ -34,6 +34,7 @@ label {
     color: var(--foreground-inputs-odds);
     cursor: pointer;
     margin-left: -30px;
+    z-index: 10;
 }
 
 .requirements-password {
@@ -60,7 +61,7 @@ label {
 @media only screen and (max-width: 768px){
     .content-header{
         margin: 8px 0;
-    }   
+    }
 }
 
 #legitimuz-container {
