fix(css): adjust flex alignment with updates to justify-content and align-items

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <ng-template #demoModal let-modal>
-    <div class="modal-inicial" style="display: flex; justify-content: end;">
+    <div class="modal-inicial" style="display: flex; justify-content: flex-end;">
         <a class="close-imagem-inicial-demo" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <i class="fa fa-times" aria-hidden="true"></i>
         </a>
@@ -46,7 +46,7 @@
 </ng-template>
 
 <ng-template #ativacaoCadastroModal let-modal>
-    <div class="modal-header" style="display: flex; justify-content: end;">
+    <div class="modal-header" style="display: flex; justify-content: flex-end;">
         <a class="close-imagem-inicial-demo" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <i class="fa fa-times" aria-hidden="true"></i>
         </a>
