--- a/src/app/esportes/generico/basquete-jogo/basquete-jogo.component.css
+++ b/src/app/esportes/generico/basquete-jogo/basquete-jogo.component.css
@@ -65,7 +65,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     padding: 10px;
     position: relative;
     height: 20vh;
@@ -94,7 +94,7 @@
     color: #FFFFFF;
     height: 33%;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
 }
 
@@ -202,7 +202,7 @@
 .odds-coluna {
     padding: 0;
     display: flex;
-    align-self: start;
+    align-self: flex-start;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -321,7 +321,7 @@
     .campeonato-nome{
         height: 45px;
         display: flex;
-        align-items: end;
+        align-items: flex-end;
         justify-content: center;
     }
     .indentificacao .campeonato-nome {
@@ -373,7 +373,7 @@
     .wrap-sticky {
         padding: 0;
     }
-    
+
     .content-sports.inside-event {
         padding-top: 0;
     }
