--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -504,7 +504,7 @@
 </ng-template>
 
     <ng-template #ativacaoCadastroModal let-modal>
-        <div class="modal-header" style="display: flex; justify-content: end;">
+        <div class="modal-header" style="display: flex; justify-content: flex-end;">
             <a class="close-modal-ativacao" aria-label="Close" (click)="modal.dismiss('Cross click')">
                 <i class="fa fa-times" aria-hidden="true"></i>
             </a>
