--- a/src/app/cambistas/aposta/aposta.component.css
+++ b/src/app/cambistas/aposta/aposta.component.css
@@ -196,7 +196,7 @@
 
     .card-dashboard h3 {
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         gap: 25px;
     }
 
