--- a/src/app/cambistas/tabela/tabela.component.css
+++ b/src/app/cambistas/tabela/tabela.component.css
@@ -167,7 +167,7 @@ ul li ul li:before {
 
     .card-dashboard h3 {
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         gap: 25px;
     }
 
