--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.css
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.css
@@ -197,7 +197,7 @@ div.info-colunm div.info-resultado{
 
     .card-dashboard h3 {
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         gap: 25px;
     }
 
