--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
@@ -133,7 +133,7 @@ h3 {
 
 .close-register-cancel-header {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-top: 10px;
 }
 
