refact: appling bem css to recommended to you component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
                 *ngSwitchCase="'betpilot'"
                 class="widgets"
                 linkAll="/casino"
-                [games]="getGames()"
+                [games]="gamesRecommended"
                 [title]="widget.name"
                 [icon]="widget.icon"
             />
