--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -421,7 +421,7 @@
                             class="link-termos-politica"> {{'footer.politicaDePrivacidade' | translate | lowercase}}</a>.
                     </label>
                     <label *ngIf="isLoterj" [ngClass]="{ 'label-termo-uso': aplicarCssTermo }">
-                        <input type="checkbox" id="termosUso" formControlName="termosUso">
+                        <input type="checkbox" id="termsAccepted" formControlName="termsAccepted">
                         <div>
                             {{'geral.certificoQueTenhoMais' | translate}}
                             <a id="linkTermos"
@@ -434,7 +434,7 @@
                                [routerLink]="['/informacoes/politica-privacidade']"
                                class="link-termos-politica"> {{'footer.politicaDePrivacidade' | translate | lowercase}}</a>.
                         </div>
-                        <app-error-msg [control]="form.get('termosUso')"
+                        <app-error-msg [control]="form.get('termsAccepted')"
                                        class="text-left"></app-error-msg>
                     </label>
                 </div>
