feat: show bank account menu only when useBankAccount is selected

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -487,6 +487,7 @@
                                 <a
                                     (click)="openBankAccount()"
                                     [class.disabled]="accountVerificationPending"
+                                    *ngIf="useBankAccount"
                                 >
                                     <span>
                                         <i class="fa fa-bank"></i>
