Feat: Create Guard terms

--- a/src/app/shared/layout/modals/terms-accepted/terms-accepted.component.html
+++ b/src/app/shared/layout/modals/terms-accepted/terms-accepted.component.html
@@ -18,7 +18,7 @@
     </div>
     <ng-template #confirmLogout>
         <button class="account-verification-alert__btn-to-cancel" (click)="logout()">
-            Sair da minha conta
+            Desejo recusar os termos
         </button>
     </ng-template>
 </div>
