feature: acount bank paybrokers

--- a/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.html
+++ b/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.html
@@ -26,6 +26,7 @@
                         </div>
                         <span class="account__bank-agency">Agência: {{ accountItem.numeroAgencia }}</span>
                         <span class="account__bank-account">Conta: {{ accountItem.numeroConta }}</span>
+                        <span class="account__account-type">Digito: {{ accountItem.digito }}</span>
                         <span class="account__account-type">Conta {{ accountItem.tipoConta }}</span>
                     </div>
                 </div>
