--- a/src/app/shared/layout/modals/add-bank-account-modal/add-bank-account-modal.component.html
+++ b/src/app/shared/layout/modals/add-bank-account-modal/add-bank-account-modal.component.html
@@ -40,6 +40,12 @@
                     <app-error-msg [control]="form.get('accountNumber')"></app-error-msg>
                 </div>
 
+                <div class="form-group input-md">
+                    <input type="text" formControlName="accountDigit" class="form-control inverted-out" maxlength="1" required pattern="^\S*$">
+                    <label class="label">{{'bankAccounts.AccountDigit' | translate}}</label>
+                    <app-error-msg [control]="form.get('accountDigit')"></app-error-msg>
+                </div>
+
                 <div class="form-group input-md placeholder-active">
                     <select formControlName="accountType" class="form-control inverted-out">
                         <option value="">{{'bankAccounts.optionAccountType' | translate}}</option>
