--- a/src/app/shared/layout/modals/terms-accepted/terms-accepted.component.html
+++ b/src/app/shared/layout/modals/terms-accepted/terms-accepted.component.html
@@ -1,23 +1,23 @@
-<div class="account-verification-alert">
-    <div class="account-verification-alert__header">
-        <span class="account-verification-alert__icon--left">
+<div class="terms-accepted" id="terms-accepted">
+    <div class="terms-accepted__header">
+        <span class="terms-accepted__icon--left">
             <i class="fa fa-exclamation" aria-hidden="true"></i>
         </span>
     </div>
-    <div class="account-verification-alert__body">
-        <span class="account-verification-alert__title">{{ title }}</span>
-        <span class="account-verification-alert__description" [innerHTML]="description"></span>
+    <div class="terms-accepted__body">
+        <span class="terms-accepted__title">{{ title }}</span>
+        <span class="terms-accepted__description" [innerHTML]="description"></span>
     </div>
-    <div class="account-verification-alert__footer">
-        <button class="account-verification-alert__btn-to-verify" (click)="acceptedTerms()">
+    <div class="terms-accepted__footer">
+        <button class="terms-accepted__btn-to-verify" (click)="acceptedTerms()">
             Aceitar os novos termos
         </button>
-        <button *ngIf="!cancelTerms; else confirmLogout" class="account-verification-alert__btn-to-cancel" (click)="changeButton()">
+        <button *ngIf="!cancelTerms; else confirmLogout" class="terms-accepted__btn-to-cancel" (click)="changeButton()">
             Recusar termos
         </button>
     </div>
     <ng-template #confirmLogout>
-        <button class="account-verification-alert__btn-to-cancel" (click)="logout()">
+        <button class="terms-accepted__btn-to-cancel" (click)="logout()">
             Desejo recusar os termos
         </button>
     </ng-template>
