--- a/src/app/shared/layout/modals/terms-accepted/terms-accepted.component.scss
+++ b/src/app/shared/layout/modals/terms-accepted/terms-accepted.component.scss
@@ -1,4 +1,4 @@
-.account-verification-alert {
+.terms-accepted {
     background-color: var(--background);
     color: var(--foreground);
     display: flex;
@@ -175,7 +175,7 @@ a:hover {
 }
 
 @media screen and (min-width: 667px) {
-    .account-verification-alert {
+    .terms-accepted {
         height: auto;
         max-width: 500px;
         position: relative;
