--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -443,7 +443,7 @@
                                     <span>
                                         <i class="fa fa-solid fa-user"></i>
                                     </span>
-                                    {{ 'geral.editarPerfil' | translate }}
+                                    {{ 'geral.dadosPessoais' | translate }}
                                     <span class="arrow-nav">
                                         <i class="fa-solid fa-angle-right"></i>
                                     </span>
