--- a/src/app/shared/layout/modals/add-bank-account-modal/add-bank-account-modal.component.html
+++ b/src/app/shared/layout/modals/add-bank-account-modal/add-bank-account-modal.component.html
@@ -57,7 +57,7 @@
                 </div>
                
                 <div class="buttons">
-                    <button class="btn btn-custom2 w-150 mr-4 btn-cancell" type="button" (click)="resetForm()">
+                    <button class="btn btn-custom2 w-150 mr-4 btn-cancell" type="button" (click)="toBack()">
                         {{'geral.cancelar' | translate}}
                     </button>
                     <button
