--- a/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.scss
+++ b/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.scss
@@ -56,8 +56,8 @@
     width: 90%;
 }
 
-.list-accounts div {
-    margin-bottom: 10px;
+.list-accounts{
+    gap: 10px;
 }
 
 @media only screen and (min-width: 660px) {
@@ -67,5 +67,11 @@
 
     .list-accounts div {
         margin-bottom: 0px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .list-accounts{
+        gap: 0;
     }
 }
