refact: get games recommendations when user logged in

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div #topHome class="home-container" [ngStyle]="{'max-height': 'calc(100vh - ' +headerHeight+'px)'}">
     <ng-container *ngFor="let widget of widgets">
         <ng-container [ngSwitch]="widget.type">
-            <ng-container *ngIf="hasCustomerLoggedIn">
+            <ng-container *ngIf="hasCustomerLoggedIn && gamesRecommended.length > 0">
                 <app-recommended-to-you
                     *ngSwitchCase="'betpilot'"
                     class="widgets"
