--- a/src/app/clientes/personal-data/document/document.component.css
+++ b/src/app/clientes/personal-data/document/document.component.css
@@ -7,7 +7,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
-    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .field {
