feat: implement dynamic policy links using slug

--- a/src/app/clientes/personal-data/terms/terms.component.html
+++ b/src/app/clientes/personal-data/terms/terms.component.html
@@ -5,21 +5,21 @@
                 <i class="fa fa-file"></i>
                 Termos de uso
             </span>
-            <a href="#">Visualizar <i class="fa fa-external-link"></i></a>
+            <a [routerLink]="termsAndConditionsLink" target="_blank">Visualizar <i class="fa fa-external-link"></i></a>
         </li>
         <li>
             <span>
                 <i class="fa fa-file"></i>
                 Política de privacidade
             </span>
-            <a href="#">Visualizar <i class="fa fa-external-link"></i></a>
+            <a [routerLink]="privacyPolicyLink" target="_blank">Visualizar <i class="fa fa-external-link"></i></a>
         </li>
         <li>
             <span>
                 <i class="fa fa-file"></i>
                 Termos de serviço
             </span>
-            <a href="#">Visualizar <i class="fa fa-external-link"></i></a>
+            <a [routerLink]="termsOfServiceLink" target="_blank">Visualizar <i class="fa fa-external-link"></i></a>
         </li>
     </ul>
 </div>
