--- a/src/app/shared/layout/modals/migration-information-modal/migration-information-modal.component.html
+++ b/src/app/shared/layout/modals/migration-information-modal/migration-information-modal.component.html
@@ -10,8 +10,7 @@
     <div style="display: flex; justify-content: center;">
         <i class="fa fa-lock" style="font-size: 3rem;"></i>
     </div>
-    <div class="mt-3" style="font-size: 1.5rem;">
-        {{'senhas.passwordMigration' | translate}}
+    <div class="mt-3" style="font-size: 1.5rem;" [innerHTML]="'senhas.passwordMigration' | translate">
     </div>
     <div class="mt-3 d-flex align-center" style="justify-content: center;">
         <button (click)="activeModal.dismiss('Cross click')" class="btn btn-custom">{{'botoes.entendi' |
