--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -346,7 +346,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" *ngIf="!formSocial && !isLoterj">
+            <div class="row" *ngIf="!formSocial">
                 <div class="col-md-12">
                     <div class="form-group mb-4">
                         <div class="input-md">
