adjust: adjust to not send bettingShopId

--- a/src/app/shared/layout/modals/betting-shop-switch-modal/betting-shop-switch-modal.component.html
+++ b/src/app/shared/layout/modals/betting-shop-switch-modal/betting-shop-switch-modal.component.html
@@ -12,10 +12,10 @@
                 </div>
                 <div class="modal-footer-betting-shop-switch">
                     <button type="button" (click)="continueToReconnect()" class="btn btn-secondary btn-no">
-                        Reconectar
+                        {{'geral.disconnect' | translate}}
                     </button>
                     <button type="button" (click)="continueToHome()" class="btn btn-custom btn-yes">
-                        Continuar
+                        {{'geral.continue' | translate}}
                     </button>
                 </div>
             </ng-container>
