fix: correction of license image urls

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -166,12 +166,12 @@
                     <div class="licences" *ngIf="hasLicence">
                         <h2>{{"footer.licences" | translate}}</h2>
                         <div class="licences-images" [ngStyle]="{'grid-template-columns': licences.length >1 ? 'repeat(2, 1fr)' : 'repeat(1, 1fr)'}">
-                            <img class="licence" src="https://cdn.wee.bet/img/accreditors/gcb-orange.svg" alt="" *ngIf="hasCuracaoTemporary">
+                            <img class="licence" src="https://wb-assets.com/img/accreditors/gcb-orange.svg" alt="" *ngIf="hasCuracaoTemporary">
                             <img class="licence" src="https://wb-assets.com/img/accreditors/gcb-green.svg" alt="" *ngIf="hasCuracao">
-                            <img class="licence" src="https://cdn.wee.bet/img/accreditors/lotserido.svg" alt="" *ngIf="hasBodo">
-                            <img class="licence" src="https://cdn.wee.bet/img/accreditors/loterj.svg" alt="" *ngIf="hasLoterj">
-                            <img class="licence" src="https://cdn.wee.bet/img/accreditors/lotep.svg" alt="" *ngIf="hasLotep">
-                            <img class="licence" src="https://cdn.wee.bet/img/accreditors/anjouan.svg" alt="" *ngIf="hasAnjouan">
+                            <img class="licence" src="https://wb-assets.com/img/accreditors/lotserido.svg" alt="" *ngIf="hasBodo">
+                            <img class="licence" src="https://wb-assets.com/img/accreditors/loterj.svg" alt="" *ngIf="hasLoterj">
+                            <img class="licence" src="https://wb-assets.com/img/accreditors/lotep.svg" alt="" *ngIf="hasLotep">
+                            <img class="licence" src="https://wb-assets.com/img/accreditors/anjouan.svg" alt="" *ngIf="hasAnjouan">
                         </div>
                     </div>
                 </div>
