Reopen VIsual Review

--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
@@ -397,3 +397,7 @@ a {
     gap: 10px;
     background-color: rgb(255, 255, 255, 0.1);
 }
+
+.select.inverted-out, .select-account , input.inverted-out{
+    opacity: 0.7 !important;
+}
