feat: remove comments

--- a/src/app/superodds/superodds-betslip/superodds-betslip.component.html
+++ b/src/app/superodds/superodds-betslip/superodds-betslip.component.html
@@ -34,8 +34,9 @@
                 <div class="div-jogos-selecionados">
                     <div id="nenhum-jogo">
                         <p>
-                            <span><i
-                                class="fa-solid fa-circle-info"></i> {{'bilhete.nenhumaApostaSelecionada' | translate}}!</span>
+                            <span>
+                                <i class="fa-solid fa-circle-info"></i> {{'bilhete.nenhumaApostaSelecionada' | translate}}!
+                            </span>
                         </p>
                         {{'bilhete.selecioneAlgumaAposta' | translate}}
                     </div>
