--- a/src/app/shared/layout/modals/aposta-modal/aposta-modal.component.html
+++ b/src/app/shared/layout/modals/aposta-modal/aposta-modal.component.html
@@ -33,12 +33,10 @@
 
 <div class="modal-body" [ngStyle]="{'background-color': aposta.tipo == 'casino' ? 'var(--game)' : ''}" *ngIf="aposta.tipo != 'esportes'; else bilheteEsporte">
     <app-exibir-bilhete-loteria [aposta]="aposta" *ngIf="aposta.tipo == 'loteria'"></app-exibir-bilhete-loteria>
-    <app-bilhete-acumuladao [aposta]="aposta" *ngIf="aposta.tipo == 'acumuladao'">
-    </app-bilhete-acumuladao>
-    <app-exibir-bilhete-desafio [aposta]="aposta" *ngIf="aposta.tipo == 'desafio'">
-    </app-exibir-bilhete-desafio>
-    <app-exibir-bilhete-rifa [aposta]="aposta" *ngIf="aposta.tipo == 'rifa'">
-    </app-exibir-bilhete-rifa>
+    <app-bilhete-acumuladao [aposta]="aposta" *ngIf="aposta.tipo == 'acumuladao'"></app-bilhete-acumuladao>
+    <app-exibir-bilhete-desafio [aposta]="aposta" *ngIf="aposta.tipo == 'desafio'"></app-exibir-bilhete-desafio>
+    <app-exibir-bilhete-superodd [aposta]="aposta" *ngIf="aposta.tipo == 'superodd'"></app-exibir-bilhete-superodd>
+    <app-exibir-bilhete-rifa [aposta]="aposta" *ngIf="aposta.tipo == 'rifa'"></app-exibir-bilhete-rifa>
     <app-exibir-bilhete-cassino [aposta]="aposta" *ngIf="aposta.tipo == 'casino'"></app-exibir-bilhete-cassino>
 </div>
 <ng-template #bilheteEsporte>
