feat:  add modal term accept in betby

--- a/src/app/shared/layout/modals/terms-accepted/terms-accepted.component.html
+++ b/src/app/shared/layout/modals/terms-accepted/terms-accepted.component.html
@@ -18,7 +18,7 @@
     </div>
     <ng-template #confirmLogout>
         <button class="terms-accepted__btn-to-cancel" (click)="logout()">
-            Desejo recusar os termos
+            {{ confirmLogoutText }}
         </button>
     </ng-template>
 </div>
