--- a/src/app/clientes/personal-data/document/document.component.html
+++ b/src/app/clientes/personal-data/document/document.component.html
@@ -28,23 +28,23 @@
     <div class="grid">
         <div class="field">
             <label>CPF</label>
-            <span>{{ customer.cpf }}</span>
+            <span>{{ customer?.cpf }}</span>
         </div>
         <div class="field">
             <label>Nome</label>
-            <span>{{ customer.nome }} {{ customer.sobrenome }}</span>
+            <span>{{ customer?.nome }} {{ customer?.sobrenome }}</span>
         </div>
         <div class="field">
             <label>Data de nascimento</label>
-            <span>{{ customer.data_nascimento }}</span>
+            <span>{{ customer?.data_nascimento }}</span>
         </div>
         <div class="field">
             <label>Nacionalidade</label>
-            <span>{{ customer.nationality }}</span>
+            <span>{{ customer?.nationality }}</span>
         </div>
         <div class="field">
             <label>Gênero</label>
-            <span>{{ customer.genero }}</span>
+            <span>{{ customer?.genero }}</span>
         </div>
     </div>
 </div>
