fix: default color of table

--- a/src/app/acessos-clientes/last-accesses.component.css
+++ b/src/app/acessos-clientes/last-accesses.component.css
@@ -108,6 +108,12 @@
     padding: 10px;
 }
 
+.table tbody tr td {
+    background-color: var(--bottom-bar);
+    color: var(--foreground-game);
+    border-bottom: 1px solid var(--game);
+}
+
 .table td.no-border {
     border-left: 0 !important;
 }
