--- a/src/app/shared/layout/modals/aposta-modal/aposta-modal.component.css
+++ b/src/app/shared/layout/modals/aposta-modal/aposta-modal.component.css
@@ -1,5 +1,6 @@
 .modal-header {
     background-color: var(--header);
+    justify-content: space-between;
 }
 .classe-esportes {
     font-family: 'Open Sans', sans-serif;
@@ -26,6 +27,10 @@
 
 .cupom-header .modal-body .cupom-header {
     font-size: 14px;
+}
+
+.table tbody tr td {
+    color: var(--foreground-game);
 }
 
 @media only screen and (max-width: 532px) {
