--- a/src/app/clientes/indique-ganhe/indique-ganhe.component.css
+++ b/src/app/clientes/indique-ganhe/indique-ganhe.component.css
@@ -44,6 +44,12 @@
     vertical-align: middle;
 }
 
+.table tbody tr td {
+    background-color: var(--bottom-bar);
+    color: var(--foreground-game);
+    border-bottom: 1px solid var(--game);
+}
+
 .table tbody tr td:first-child span {
     display: flex;
     align-items: center;
